--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,14 @@
 
 <body>
   <main>
-    <h1>Chocolate Java App with cherries on top.</h1>
+    <div class="row">
+      <div class="column"></div>
+      <div class="column">Mtbeds<br/>YOUR WAY, YOUR STAY<br/>Mtbeds Logo</div>
+      <div class="column"></div>
+    </div>
+      
+    <h1></h1>
+   
   </main>
 </body>
 
