--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
   <title>Vanilla JavaScript App</title>
 </head>
 
-<body>
+<body class="mulish-Mtbeds">
   <main>
     <div class="row">
       <div class="column"></div>
-      <div class="column">Mtbeds<br/>YOUR WAY, YOUR STAY<br/>Mtbeds Logo</div>
+      <div class="column middleColumn" style="text-align:center;width: 568px;">
+        <p>NEW PLATFORM</p>
+        <p>Coming Soon!</p>
+        
+        Mtbeds<br/>YOUR WAY, YOUR STAY<br/>Mtbeds Logo</div>
       <div class="column"></div>
     </div>
       
