--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
   <title>Vanilla JavaScript App</title>
 </head>
 
-<body class="mulish-Mtbeds">
+<body class="mulish-Mtbeds" style="background-image:url('mtbeds-cape-town.webp');">
   <main>
     <div class="row">
       <div class="column"></div>
-      <div class="column middleColumn" style="text-align:center;width: 568px;">
+      <div class="column middleColumn" style="text-align:center;width: 568px;Height: 1080px;">
         <p>NEW PLATFORM</p>
         <p>Coming Soon!</p>
         
