--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,14 @@
 
 <body class="mulish-Mtbeds" style="background-image:url('mtbeds-cape-town.webp');">
   <main>
-    <div class="row">
-      <div class="column"></div>
-      <div class="column middleColumn" style="text-align:center;width: 568px;Height: 1080px;">
-        <p>NEW PLATFORM</p>
-        <p>Coming Soon!</p>
+      <div class="middleColumn" style="text-align:center;width: 500px;Height: 100%;">
+        <div>
+        <p class="titleTop">NEW PLATFORM</p>
+        <p class="">Coming Soon!</p>
+        <p style="height:500px">WATCH THIS SPACE...</p>
+        <img src="mtbeds-logo.webp"/>
         
-        Mtbeds<br/>YOUR WAY, YOUR STAY<br/>Mtbeds Logo</div>
-      <div class="column"></div>
-    </div>
-      
-    <h1></h1>
+     </div>
    
   </main>
 </body>
