style background and div stack

--- a/src/index-Elisca’s MacBook Pro.html
+++ b/src/index-Elisca’s MacBook Pro.html
@@ -11,17 +11,11 @@
   <title>mtbeds.co.za - Your Stay, Your Way</title>
 </head>
 
-<body class="mulish-Mtbeds">
-  <div height="980px">
-      <div class="image-container">
-        <img src="mtbeds-background-7.webp" />
-        <img src="mtbeds-background-6.webp" />
-        <img src="mtbeds-background-5.webp" />
-        <img src="mtbeds-background-4.webp" />
-        <img src="mtbeds-background-3.webp" />
-        <img src="mtbeds-background-2.webp" />
-        <img src="mtbeds-background-1.webp" />
-    </div>
+<body class="mulish-Mtbeds" style="background-image:url('mtbeds-your-stay-your-way.mp4') ;">
+  <main>
+    <video autoplay muted loop id="myVideo">
+      <source src="mtbeds-your-stay-your-way.mp4" type="video/mp4">
+    </video>
     <div class="wrapper">
       <div class="middleColumn">
       
@@ -32,7 +26,7 @@
         
       </div>
     <div>
-</div>
+  </main>
 </body>
 
 </html>
