changes made to responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ 
   <title>mtbeds.co.za - Your Stay, Your Way</title>
 </head>
 
-<body class="mulish-Mtbeds">
-  <div height="980px">
+<body class="mulish-Mtbeds" style="overflow:hidden">
+ <div class="container-fluid">
+  <div class="row vh-100 mw-100">
+    <div>
       <div class="image-container">
         <img src="mtbeds-background-7.webp" />
         <img src="mtbeds-background-6.webp" />
@@ -21,18 +25,28 @@
         <img src="mtbeds-background-3.webp" />
         <img src="mtbeds-background-2.webp" />
         <img src="mtbeds-background-1.webp" />
-    </div>
-    <div class="wrapper">
-      <div class="middleColumn">
-      
-        <p class="titleTop">NEW PLATFORM</p>
-        <p class="titleMain">Coming Soon!</p>
-        <p class="titleMiddle">WATCH THIS SPACE...</p>
-        <img src="mtbeds-logo.svg" width="70%"/>
-        
       </div>
-    <div>
-</div>
+    </div>
+   <div>  
+ </div>
+ <div class="container vh-100">
+    <div class="row vh-100">
+      <div class="col-1 col-lg-3 col-sm-2 col-m-2"></div>
+      <div class="col col-lg col-sm col-m middleColumn d-flex flex-column justify-content-between">
+         <div><p class="titleTop">NEW PLATFORM</p>
+              <p class="titleMain">Coming Soon!</p></div>
+         <div><p class="titleMiddle">WATCH THIS SPACE...</p></div>
+         <div><img src="mtbeds-logo.svg" width="70%"/></div>
+      </div>
+      <div class="col-1 col-lg-3 col-sm-2 col-m-2"></div>
+    </div>
+ </div>
+ <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
